--- a/TODO
+++ b/TODO
@@ -49,11 +49,12 @@ AUTOMATIC
 	
 	#string_to_automatic_partitions(tabname admin.qualified_name,modulus INT)
 	#string_to_automatic_partitions(tabname admin.qualified_name,boundlist ANYARRAY)
-	string_to_automatic_partitions(tabname admin.qualified_name,interval INTERVAL, center TIMESTAMP WITH TIME ZONE, back INT=0, ahead INT=0)
-		analyzer TOUTE la ligne ave cregexp_match
+	#string_to_automatic_partitions(tabname admin.qualified_name,interval INTERVAL, center TIMESTAMP WITH TIME ZONE, back INT=0, ahead INT=0)
+		#analyzer TOUTE la ligne ave cregexp_match
 	
-	create_automatic_table(tabname admin.qualified_name, tplname admin.qualified_name,
 	create_automatic_table_like(tabname TEXT, tplname TEXT, keyspec1 TEXT, partspec1 TEXT,...);
+		renommer la table mère à chaque itération
+		
 	
 CREATE TABLE tb PARTITION BY HASH(column) [OVER AUTOMATIC MODULUS] integer
 CREATE TABLE tb PARTITION BY LIST(column) [OVER AUTOMATIC LIST] (list) [WITH DEFAULT]
@@ -72,7 +73,7 @@ https://engineering.workable.com/postgres-live-partitioning-of-existing-tables-1
 	#attach partition
 	#remove check constraint that where added (not those of the parent)
 	
-#Move rows
+Move rows
 
 Create façace for merging partitionned top table
 	Create view for merging partitionned table unattached partition if not already exists, AND default
