--- a/TODO
+++ b/TODO
@@ -61,8 +61,10 @@ AUTOMATIC
 			#create_automatic_table_like (newname,tplname,keypecn, partspecn)
 			#drop tpl of not the orignal one
 			#tplname=newname
+		#pb avec les noms de partitions
 		pb avec les listes...
-		ajouter les autre colonnes de partitions en minvalue maxvalue
+		ajouter les autre colonnes de partitions en minvalue maxvalue pour range
+		verifier multicolonnes pour hash
 		
 	
 CREATE TABLE tb PARTITION BY HASH(column) [OVER AUTOMATIC MODULUS] integer
